# mwc

./: CMakeLists.txt  README
datasets/: C125.9.sol  C125.9.wclq  C250.9.sol  C250.9.wclq  C500.9.wclq  DSJC1000.5.sol  DSJC500.5.sol  DSJC500.5.wclq  MANN_a27.sol  MANN_a27.wclq  brock200_2.sol  brock200_2.wclq  brock200_4.sol  brock200_4.wclq  brock400_2.sol  brock400_2.wclq  brock400_4.sol  brock400_4.wclq  brock800_2.wclq  brock800_4.wclq  gen200_p0.9_44.sol  gen200_p0.9_44.wclq  gen200_p0.9_55.sol  gen200_p0.9_55.wclq  gen400_p0.9_55.wclq  gen400_p0.9_65.wclq  gen400_p0.9_75.sol  gen400_p0.9_75.wclq  hamming10-2.sol  hamming8-4.wclq  keller4.sol  keller4.wclq  keller5.wclq  p_hat1000-1.sol  p_hat1000-1.wclq  p_hat1000-2.sol  p_hat1000-2.wclq  p_hat1000-3.sol  p_hat1000-3.wclq  p_hat1500-1.sol  (+16 more)
results/: p_hat1000-1.sol  p_hat1000-1_res_obj.csv  p_hat1000-1_res_time.csv
src/: graph.cpp  graph.h  main.cpp  reduce.cpp  reduce.h  solver.cpp  solver.h  training.cpp  training.h
src/linear_svm/: linear_svm_predict_model.c  linear_svm_predict_model.h  linear_svm_train_model.c  linear_svm_train_model.h
src/solvers/: fastwclq.cpp  fastwclq.h  lscc.cpp  lscc.h  tsm.c  tsm.h  wlmc.c  wlmc.h
src/svm/: svm_predict_model.c  svm_predict_model.h  svm_train_model.c  svm_train_model.h
train_data/: linear_svm_train_model  svm_train_model
